adding some more routes in backend
