# server/routes/User.js
@@ -3,11 +3,11 @@ const router = express.Router();
 
 const {demo} = require('../middlewares/Demo'); 
 const {AuthMid} = require('../middlewares/AuthMid');
-const {login,signup,resetPassword,otpGenerator} = require('../controllers/Auth');
+const {login,signup,resetPassword,otpGenerator,contactUs} = require('../controllers/Auth');
 
 const {dashboard} = require('../controllers/Dashboard');
 
-const {CloudMail} = require('../controllers/Auth');
+const {CloudMail,uploadImage} = require('../controllers/Auth');
 
 
 router.post("/uploader",demo,CloudMail);
@@ -17,6 +17,8 @@ router.post("/signup",demo,signup);
 
 router.put("/otpGenerator",demo,otpGenerator);
 router.post("/resetPassword",demo,resetPassword);
+router.put("/uploadImage",AuthMid,uploadImage);
+router.post("/contactUs",contactUs);
 
 router.get('/dashboard',AuthMid,dashboard);
 
